--- a/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
@@ -110,9 +110,9 @@
                                                                 <img src="../../../../../assets/media/files/{{item.attachmentExtension}}">
                                                                 <span>{{item.attachmentName}}</span>
                                                             </a>
-                                                            <button class="cross-btn" (click)="deleteAttachment(item.id)">
+                                                            <span class="cross-btn" (click)="deleteAttachment(item.id)">
                                                                 <span class="fa fa-window-close"></span>
-                                                            </button>
+                                                            </span>
                                                         </div>
                                                     </div>
                                                 </div>
