--- a/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
@@ -80,9 +80,9 @@
                                             <img src="../../../../../assets/media/files/{{item.attachmentExtension}}">
                                             <span>{{item.attachmentName}}</span>
                                         </a>
-                                        <button class="cross-btn" (click)="deleteAttachment(item.id)">
+                                        <span class="cross-btn" (click)="deleteAttachment(item.id)">
                                             <span class="fa fa-window-close"></span>
-                                        </button>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
