--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.css
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.css
@@ -28,9 +28,10 @@
     
     .attachments_section{
     display: inline-block;
-    background-color: #45414E14;
+    background-color: #f0f0f1;
     width: 200px;
-    padding: 10px 5px;
+    padding:5px;
+    min-height:35px;
     }
     .attachments_section_none {
         display: inline-block;
@@ -826,6 +827,7 @@
     .category-selector .dropdown-menu{
         width: 170px;
     }
+    
     @media only screen and (max-width:1900px){
         .table-row-collapsible .accountSubtype-cell{
             display: none;
@@ -850,16 +852,13 @@
     .table-row-collapsible  .action-cell{
         display: flex;
     }
-    .toggle-btn-cell .taggle-btn{
-        display: table-cell;
-        }
+    
     }
     @media only screen and (max-width:1600px){
         .assignee-cell {
             width: 250px;
         }
         .accountSubtype-cell{
-            width: 200px;
             display: table-cell;
         }
         .record-table td{
@@ -871,9 +870,6 @@
         
         .toggle-btn-cell .action-cell{
            display: none;
-       }
-       .toggle-btn-cell .taggle-btn{
-           display: table-cell;
        }
        .table-row-collapsible{
         display: table-row;
@@ -900,7 +896,7 @@
             width:160px !important;
         }
         .accountSubtype-cell{
-            width: 180px !important;
+            width: 255px !important;
         }
         .reconciliation-cell{
             display: table-cell;
@@ -911,7 +907,7 @@
     }   
     @media only screen and (max-width:1279px){
         
-        .reconciliation-cell{
+        .accountSubtype-cell{
             display: none;
             }
             .table-row-collapsible  .reconciliation-cell{
@@ -947,6 +943,7 @@
             width: 150px;
             cursor: pointer;
         }
+        
     }
     @media only screen and (max-width:1140px){
         button.btn.arrow-btn{
@@ -1079,7 +1076,7 @@
         cursor: pointer;
     }
     .accountSubtype-cell {
-        width: 200px;
+        width: 255px;
         cursor: pointer;
     }
     .reconciliation-cell{
@@ -1243,17 +1240,39 @@
         margin-bottom: 20px;
     }
     span.attatchments-box {
-        width: 45px;
-        height: 45px;
+        width: 35px;
+        height: 35px;
         display: inline-flex;
         justify-content: center;
         align-items: center;
         background: #f0f0f1;
         margin-left: 10px;
         color: #007ad9;
+        position: relative;
+    }
+    span.attatchments-box .attachment-dropdown{
+        position: absolute;
+        top: 100%;
+        right: 0;
+        z-index: 1;
+        border: 1px solid #eeeeee;
+        padding: 5px;
+        border-radius: 5px;
+        background-color: #fff;
+        display: none;
+    }
+    span.attatchments-box:hover .attachment-dropdown{
+        display:block;
     }
     tr.table-row-collapsible .attachments_section {
         padding: 5px;
+    }
+   .attachment-dropdown .attachments_section {
+        padding: 5px;
+        margin-bottom: 5px;
+    }
+    .attachment-dropdown .attachments_section:last-child{
+        margin-bottom: 0;
     }
     tr.table-row-collapsible span.attatchments-box {
         width: 35px;
@@ -1266,3 +1285,4 @@
         font-size: 10px;
         padding: 5px;
     }
+    
