--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -46,11 +46,12 @@
                                                 <div class="col-md-6 text-center" (click)="uploadaccountExcel()">
                                                     <img src="../../../../assets/img/download.png"  >
                                                    
-                                                    <p>Download Chart of Accounts</p>
+                                                   
+                                                    <p>Download Trial Balance</p>
                                                 </div>
                                                 <div class="col-md-6 text-center" (click)="downloadExcelFile()">
                                                     <img src="../../../../assets/img/download.png">
-                                                    <p>Download Trial Balance</p>
+                                                    <p>Download Chart of Accounts</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -127,6 +128,13 @@
                                         </div>
                                     
                                         <div class="modal-footer">
+                                            <span class="fileinput-button">
+                                                <p-fileUpload customUpload="true" name="ExcelFileUpload" #ExcelFileUpload
+                                                    maxFileSize="10000000" auto="auto" accept=".csv,.xls,.xlsx"
+                                                    (uploadHandler)="uploadAccountsTrialBalanceExcel($event)" (onError)="onUploadExcelError()"
+                                                    chooseLabel="{{'ImportFromExcel' | localize}}">
+                                                </p-fileUpload>
+                                            </span>
                                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                             <button type="button" class="btn btn-primary">Save changes</button>
                                             <span class="fileinput-button">
